# ds-autogen

./: .gitignore  PROJECT_SUMMARY.md  README.md  SYSTEM_ARCHITECTURE.md  deepseek_execution_instruction_20251205_84608b.txt  deepseek_python_20251205_b4e792.py  deepseek_python_20251205_b4ea37.py  deepseek_python_20251205_d1a6f1.py  deepseek_python_20251205_ff02ea.py  deepseek_text_20251205_dcbdf9.txt  数据流架构.txt  核心保存流程 (Optimizer → User_Proxy).txt
.ipynb_checkpoints/: ARCHITECTURE-checkpoint.md  README-checkpoint.md  目录结构示例-checkpoint.txt  系统架构树形图-checkpoint.txt
backend/: USAGE_EXAMPLE.md  agents.py  autogen_reviewer.py  backend.txt  docker-compose.yml  dockerfile  example_optimizer_tool_call.py  main-Copy1.py  main.py  pyproject.toml  requirements-Copy1.txt  requirements.txt  start.sh  tools.py
backend/.ipynb_checkpoints/: main-checkpoint.py  pyproject-checkpoint.toml  requirements-checkpoint.txt
backend/alembic/: env.py
backend/alembic/versions/.ipynb_checkpoints/: alembic-checkpoint.ini
backend/app/: memory_store.py
backend/app/.ipynb_checkpoints/: config-checkpoint.py
backend/app/agents/: optimizer.py  orchestrator.py  user_proxy.py
backend/app/agents/.ipynb_checkpoints/: optimizer-checkpoint.py  orchestrator-checkpoint.py
backend/app/api/: websocket_manager.py
backend/app/api/.ipynb_checkpoints/: websocket_manager-checkpoint.py
backend/app/api/routers/: __init__.py  review.py  review_simple.py  ws.py
backend/app/api/routers/.ipynb_checkpoints/: review_simple-checkpoint.py
backend/app/core/: config-Copy1.py  config.py  logging.py
backend/app/core/.ipynb_checkpoints/: config-checkpoint.py
backend/app/models/: __init__.py  database.py  models-Copy1.py  schemas.py
backend/app/models/.ipynb_checkpoints/: models-checkpoint.py
backend/app/services/: task_service.py  task_service_memory.py
backend/app/services/.ipynb_checkpoints/: task_service-checkpoint.py
backend/app/tools/: code_saver.py
backend/app/tools/.ipynb_checkpoints/: code_saver-checkpoint.py
backend/fixed/: example_with_error.py
backend/scripts/: deploy-prod.sh
backend/scripts/.ipynb_checkpoints/: start-dev-checkpoint.sh
backend/uploads/: 638de59f-d67e-4adf-8d97-b3ff09d24b0d_example_with_error.py  63a56377-f7fb-49f7-9a4b-9ce6bea48e16_test_problematic_code-openai.py  97ede611-e781-4b54-a540-7c50fcedcb96_upload_test.py
frontend/: .env.development  .env.production  .env.test  .eslintrc.js  .prettierrc  .vscode-extensions.json  .vscode-settings.json  docker-compose.yml  dockerfile  front.txt  index-Copy1.html  index.html  nginx.conf  package-lock.json  package.json  (+6 more)
(+30 files in other folders)
